[AI Fix] (a11y ADA compliance): darken post metadata and excerpt text contrast

--- a/_sass/minima/_home.scss
+++ b/_sass/minima/_home.scss
@@ -101,7 +101,7 @@
 }
 
 .home_post_excerpt {
-    color:  #767676;
+    color:  #747474;
     font-size: 75%;
     // height: calc(100% - 183px - 10px - 50px);
 }
