--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -225,15 +225,15 @@
 
 .post-meta {
   font-size: $small-font-size;
-  color: #757575;
+  color: #747474;
 }
 
 .post-meta .dt-published {
-  color: #757575;
+  color: #747474;
 }
 
 .post-meta .p-author {
-  color: #757575;
+  color: #747474;
 }
 
 .footer-col .p-name {
